# project-monitoring

./: .coveragerc  .gitignore  README.md  pyproject.toml
.github/workflows/: build-and-deploy.yml  collect_workflow_data.yml  collect_worklow_data.yml
backend/: collect_workflow_data.py
backend/functions/data/: __init__.py  github_client.py  variables.py
data/: workflows_fantasy-premier-league_Build & Push - Backend.json  workflows_fantasy-premier-league_Build & Push - React Frontend.json  workflows_fantasy-premier-league_Build & Push - Streamlit Frontend.json  workflows_fantasy-premier-league_Update Data.json  workflows_golf-ui-streamlit_Build & Deploy Application.json  workflows_golf-ui-streamlit_Collect Scorecard Data.json  workflows_golf-ui-streamlit_Collect Trackman Range Data.json  workflows_play-cricket_Build & Deploy Application.json  workflows_play-cricket_Collect Play Cricket Data.json  workflows_strava-ui-streamlit_Build & Deploy Application.json  workflows_strava-ui-streamlit_Update Data.json
frontend/: Dockerfile  entrypoint.sh  main.py
frontend/functions/: data_functions.py  navigation.py
frontend/pages/: home.py  workflow_analysis.py  workflow_overview.py
infra/: backend.tf  main.tf  provider.tf  values.tfvars
shared/: __init__.py
shared/functions/: __init__.py  blob_client.py  variables.py
shared/interfaces/: __init__.py  blob_client_base.py
tests/features/: collect_latest_workflow_runs.feature  collect_project_workflows.feature  create_repo_workflow_map.feature  transform_workflow_overview_df.feature
(+18 files in other folders)
