[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "project-monitoring"
version = "0.1.0"
description = "Python project to display and monitor all powellrhys projects"
authors = ["Rhys Powell"]
packages = [
    { include = "backend" },
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "1.0.1"
